plugins/screencast: centralize format querying into the RenderBackend

BUG: 460563
(cherry picked from commit 84635c71ec3b0b66e0276fedf0625e232fa07809)