src/core/renderbackend.h
@@ -35,6 +35,8 @@ public:
 
     virtual OutputLayer *primaryLayer(Output *output) = 0;
     virtual void present(Output *output) = 0;
+
+    virtual QHash<uint32_t, QVector<uint64_t>> supportedFormats() const;
 };
 
 } // namespace KWin
