src/platformsupport/scenes/opengl/abstract_egl_backend.h
@@ -64,6 +64,7 @@ public:
     }
 
     std::shared_ptr<GLTexture> textureForOutput(Output *output) const override;
+    QHash<uint32_t, QVector<uint64_t>> supportedFormats() const override;
 
     dev_t deviceId() const;
     virtual bool prefer10bpc() const;
